<resources>
    <string name="app_name">Ananbox</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_console">Console</string>
    <string name="title_activity_file_browser">File Browser</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_start">Start</string>
    <string name="action_settings">Settings</string>
    <string name="action_console">Console</string>
    <string name="action_file_browser">File Browser</string>
    <string name="tab_container">Container</string>
    <string name="tab_console">Console</string>
    <string name="tab_files">Files</string>
    <string name="tab_settings">Settings</string>
    <string name="profile_label">Profile</string>
    <string name="profile_add">Add profile</string>
    <string name="profile_remove">Remove profile</string>
    <string name="profile_remove_confirm">Remove profile \"%1$s\" and delete its rootfs? This cannot be undone.</string>
    <string name="profile_rootfs_ready">Profile \"%1$s\" is ready to start.</string>
    <string name="profile_rootfs_missing">Profile \"%1$s\" has no rootfs yet. Import a ROM from Settings.</string>
    <string name="settings_category_rom">ROM / Container</string>
    <string name="settings_category_container">Runtime</string>
    <string name="settings_shutdown_key">shutdown</string>
    <string name="settings_shutdown_title">Shutdown</string>
    <string name="settings_shutdown_summary">Shutdown Ananbox immediately</string>
    <string name="settings_import_rom_key">import_rom</string>
    <string name="settings_import_rom_title">Import ROM</string>
    <string name="settings_import_rom_summary">Manually select a rootfs (.tar) file and choose which profile to extract it into</string>
    <string name="settings_proot_command_key">proot_command</string>
    <string name="settings_proot_command_title">Container command</string>
    <string name="settings_proot_command_summary">Edit the proot command used to start the current profile\'s container</string>
    <string name="rom_installer_title">Import ROM</string>
    <string name="rom_installer_message">Please select a rootfs file (.tar) on your phone</string>
    <string name="rom_installer_install">Select a file</string>
    <string name="rom_installer_destination_title">Select destination profile</string>
    <string name="rom_installer_extracting_title">Extracting</string>
    <string name="rom_installer_extracting_msg">Extracting rootfs file..</string>
    <string name="rom_missing_go_to_settings">This profile has no rootfs installed yet. Go to Settings to manually import a ROM file.</string>
    <string name="proot_command_title">Container command</string>
    <string name="proot_command_message">Proot command used to start profile \"%1$s\"</string>
    <string name="proot_command_start">Start</string>
    <string name="file_browser_empty">This folder is empty</string>
    <string name="file_browser_error">Unable to read this folder (permission denied or I/O error)</string>
    <string name="file_browser_root">Internal storage</string>
    <string name="file_browser_up">Go to parent folder</string>
    <string name="file_browser_sort">Sort</string>
    <string name="file_browser_sort_by">Sort by</string>
    <string name="file_browser_sort_name">Name</string>
    <string name="file_browser_sort_size">Size</string>
    <string name="file_browser_sort_time">Modified time</string>
    <string name="file_browser_sort_order">Order</string>
    <string name="file_browser_sort_ascending">Ascending</string>
    <string name="file_browser_sort_descending">Descending</string>
    <string name="file_browser_sort_selected">Selected</string>
    <string name="console_clear_screen">Clear screen</string>
    <string name="settings_category_about">About</string>
    <string name="settings_about_title">About &amp; credits</string>
    <string name="settings_about_summary">Open source credits for this app\'s UI and console</string>
    <string name="about_title">About Ananbox</string>
    <string name="about_ui_credit_title">UI design</string>
    <string name="about_ui_credit_summary">The app\'s UI is built with Jetpack Compose and Miuix, with its screens adapted from ScrcpyForAndroid by Miuzarte (https://github.com/Miuzarte/ScrcpyForAndroid), Apache License 2.0.</string>
    <string name="about_terminal_credit_title">Console / terminal</string>
    <string name="about_terminal_credit_summary">The in-app terminal is adapted from ScrcpyForAndroid by Miuzarte (https://github.com/Miuzarte/ScrcpyForAndroid), which in turn credits termux-kotlin-app by reapercanuk39. Apache License 2.0.</string>
    <string name="main_tab_devices">Devices</string>
    <string name="main_tab_terminal">Terminal</string>
    <string name="main_tab_files">Files</string>
    <string name="main_tab_settings">Settings</string>
    <string name="main_press_back_again">Press back again to exit</string>
    <string name="main_font_read_error">Cannot read font file</string>
    <string name="main_terminal_font_imported">Terminal font imported successfully</string>
    <string name="main_terminal_font_import_failed">Terminal font import failed: %1$s</string>
    <string name="main_update_check_failed">Update check failed: %1$s</string>
    <string name="sfa_about_title">About</string>
    <string name="about_project_repo">Project repo</string>
    <string name="about_releases">Releases</string>
    <string name="about_error">Error</string>
    <string name="cd_back">Back</string>
    <string name="cd_more">More</string>
    <string name="cd_clear">Clear</string>
    <string name="cd_select_file">Select file</string>
    <string name="cd_select_font">Select font</string>
    <string name="cd_fullscreen">Fullscreen</string>
    <string name="cd_close">Close</string>
    <string name="cd_save">Save</string>
    <string name="cd_edit">Edit</string>
    <string name="cd_drag_sort">Drag to sort</string>
    <string name="cd_refresh">Refresh %1$s</string>
    <string name="text_none">None</string>
    <string name="text_default">Default</string>
    <string name="text_global">Global</string>
    <string name="text_loading">Loading…</string>
    <string name="text_not_available">None available</string>
    <string name="text_off">Off</string>
    <string name="text_auto">Auto</string>
    <string name="text_custom">Custom</string>
    <string name="text_fetching">Fetching…</string>
    <string name="text_fetch_success">Fetch successful</string>
    <string name="text_fetch_failed">Refresh failed: %1$s</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_done">Done</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_fullscreen">Fullscreen</string>
    <string name="button_pair">Pair</string>
    <string name="button_confirm">OK</string>
    <string name="button_add_device">Add device</string>
    <string name="button_direct_connect">Direct connect</string>
    <string name="button_auto_discover">Auto discover</string>
    <string name="button_discovering">Discovering…</string>
    <string name="button_swap">Swap</string>
    <string name="label_ip_address">IP address</string>
    <string name="label_port">Port</string>
    <string name="label_ip_port">IP:Port</string>
    <string name="cd_add_address">Add address</string>
    <string name="cd_delete_address">Delete address</string>
    <string name="label_device_name">Device name</string>
    <string name="label_name">Name</string>
    <string name="label_wlan_pairing_code">WLAN pairing code</string>
    <string name="label_resolution">Resolution</string>
    <string name="label_codec">Codec</string>
    <string name="label_status">Status</string>
    <string name="label_fps">FPS</string>
    <string name="label_touches">Touches</string>
    <string name="device_title">Devices</string>
    <string name="device_cd_config_right">Config panel on right</string>
    <string name="device_cd_config_left">Config panel on left</string>
    <string name="device_menu_quick_sort">Quick device sort</string>
    <string name="device_menu_virtual_button_sort">Virtual button order</string>
    <string name="device_menu_clear_logs">Clear logs</string>
    <string name="device_hint_long_press_edit">Long press to edit</string>
    <string name="device_cannot_modify_connected">Cannot modify a connected device</string>
    <string name="device_added">Device added: %1$s:%2$s</string>
    <string name="device_section_wireless_pairing">Wireless pairing</string>
    <string name="device_section_scrcpy">Scrcpy</string>
    <string name="device_section_logs">Logs</string>
    <string name="device_pairing_title">Pair device using pairing code</string>
    <string name="device_pairing_desc">Use a six-digit pairing code to pair a new device</string>
    <string name="device_quick_connect_title">Connect / Add device</string>
    <string name="device_status_mirroring">Mirroring</string>
    <string name="device_status_resolution">Resolution</string>
    <string name="device_status_codec">Codec</string>
    <string name="device_status_adb_connected">ADB connected</string>
    <string name="device_status_adb_disconnected">ADB disconnected</string>
    <string name="container_section_title">Container</string>
    <string name="container_active_profile">Active profile: %1$s</string>
    <string name="container_rootfs_ready">Rootfs ready</string>
    <string name="container_rootfs_missing">Rootfs not imported</string>
    <string name="container_select_profile">Select profile</string>
    <string name="container_edit_profile">Edit profile</string>
    <string name="container_import_rootfs">Import rootfs</string>
    <string name="container_new_profile">New profile</string>
    <string name="container_new_profile_name">Profile name</string>
    <string name="container_rename_profile">Rename profile</string>
    <string name="container_delete_profile">Delete profile</string>
    <string name="container_proot_command">proot command</string>
    <string name="container_launch_command">Launch command</string>
    <string name="container_launch_command_hint">Command used to start the container (proot …)</string>
    <string name="container_start">Start (Anbox)</string>
    <string name="container_stop">Stop</string>
    <string name="container_import_destination_title">Import rootfs into profile</string>
    <string name="container_importing">Importing rootfs…</string>
    <string name="container_import_success">Rootfs imported into %1$s</string>
    <string name="container_import_failed">Failed to import rootfs</string>
    <string name="device_status_current">Current device</string>
    <string name="device_status_state">Status</string>
    <string name="device_status_idle">Idle</string>
    <string name="device_config_audio_forwarding">Audio forwarding</string>
    <string name="device_config_audio_forwarding_desc">Forward device audio to this device (Android 11+)</string>
    <string name="device_config_audio_codec">Audio codec</string>
    <string name="device_config_audio_codec_note">Note: FLAC codec introduces significant latency</string>
    <string name="device_config_audio_bitrate">Audio bitrate</string>
    <string name="device_config_video_codec">Video codec</string>
    <string name="device_config_video_codec_note">Note: The vast majority of devices do not support AV1 hardware encoding</string>
    <string name="device_config_video_bitrate">Video bitrate</string>
    <string name="device_config_more_params">More parameters</string>
    <string name="device_config_all_params">All parameters</string>
</resources>